@@ -1,3 +1,7 @@
+2016-04-05  James Monk  <jmonk@cern.ch>
+  * Replace rows of PixelArray to keep track of empty pixels and avoid
+    division by zero
+
 2016-03-09  James Monk  <jmonk@cern.ch>
   * Fix mistake in MomentumHelpers has_Pt
 
